Fix stoppic on mobile

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -233,3 +233,10 @@ div.dropdown-menu.show{
 div#navbarSupportedContent.collapse.navbar-collapse{
     text-shadow: 2px 2px 4px #0000006b;
 }
+
+img.stopimg {
+max-width:100%;
+max-height:100%;
+width:10rem;
+height:auto;
+}
